# RapidKit

./: .dockerignore  .gitignore  .lintstagedrc.json  .oxfmtrc.json  .oxlintrc.json  .prettierignore  CLAUDE.md  Caddyfile  Makefile  README.md  commitlint.config.ts  cspell.json  docker-compose.dev.yaml  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skills-lock.json  test.md  tsconfig.json  turbo.json
apps/backend/: .env.example  README-CN.md  README.md  alembic.ini  dev.Dockerfile  docker-compose-pytest.yml  logging.ini  package.json  plugins.toml  pyproject.toml  test.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: c3e63df08148_init.py
apps/backend/plugins/auth/: pyproject.toml
apps/backend/plugins/auth/tests/: conftest.py  test_cache.py  test_data_permission.py  test_login_api.py  test_permission_context.py  test_policy_cache.py  test_policy_engine.py  test_policy_loader.py  test_policy_simulator.py  test_policy_template.py  test_rbac_function.py  test_register.py  test_role_api.py  test_role_versions.py  test_semantic_validation.py  test_session_invalidator.py  test_status_codes.py  test_token_api.py  test_token_store.py  test_utils.py
apps/backend/plugins/department/: pyproject.toml
apps/backend/plugins/department/tests/: conftest.py  test_register.py  test_services.py  test_status_codes.py
apps/backend/plugins/menu/: pyproject.toml
apps/backend/plugins/menu/tests/: conftest.py  test_menu_api.py  test_register.py  test_route_api.py  test_services.py
apps/backend/plugins/monitoring/: pyproject.toml
apps/backend/plugins/monitoring/tests/: conftest.py  test_monitoring_api.py  test_register.py
apps/backend/plugins/permission/: pyproject.toml
apps/backend/plugins/permission/tests/: conftest.py  test_bdd_scenarios.py  test_bypass.py  test_data_policy_filter.py  test_data_policy_model.py  test_deny_policy.py  test_evaluator.py  test_field_guard.py  test_field_guard_model.py  test_maskers.py  test_register.py  test_status_codes.py
apps/backend/plugins/schedule/: pyproject.toml
apps/backend/plugins/schedule/tests/: conftest.py  test_register.py  test_schedule_api.py  test_services.py  test_status_codes.py
apps/backend/plugins/script/: pyproject.toml
apps/backend/plugins/script/tests/: conftest.py  test_register.py  test_script_api.py  test_services.py  test_status_codes.py
apps/backend/plugins/system/: pyproject.toml
apps/backend/plugins/system/tests/: conftest.py  test_register.py  test_services.py  test_system_api.py
apps/backend/plugins/user/: pyproject.toml
apps/backend/plugins/user/tests/: conftest.py  test_register.py  test_services.py  test_status_codes.py  test_user_api.py
apps/backend/plugins/worker/: pyproject.toml
apps/backend/plugins/worker/tests/: conftest.py  test_register.py  test_status_codes.py  test_task_api.py  test_worker_api.py
apps/backend/scripts/: run-dev.sh
apps/backend/scripts/alembic/: detect_changes.py
apps/backend/scripts/celery/: beat-run.sh  worker-run.sh
apps/backend/scripts/check/: lint.sh
apps/backend/src/: _menu_seeds.py  initdb.py  lifecycle.py  main.py
apps/backend/src/api/v1/: __init__.py  auth.py  manage.py  roles.py  router.py
apps/backend/src/common/: crud.py  deps.py  models.py
apps/backend/src/common/schemas/: __init__.py  request.py  response.py  types.py
apps/backend/src/core/: config.py  context.py  database.py  environment.py  exceptions.py  lifecycle.py  limiter.py  log.py  path.py  redis_client.py  route.py  status_codes.py
apps/backend/src/crud/: auth.py  crud_sqlmodel.py  manage.py  role.py  router.py
apps/backend/src/domains/: __init__.py
apps/backend/src/domains/auth/: api.py  crud.py  deps.py  models.py  schemas.py  services.py
apps/backend/src/domains/menu/: api.py  crud.py  deps.py  models.py  schemas.py  services.py
apps/backend/src/domains/monitoring/: aggregator.py  api.py  crud.py  deps.py  models.py  push.py  schemas.py  services.py
apps/backend/src/domains/role/: api.py  crud.py  deps.py  models.py  schemas.py  services.py
apps/backend/src/domains/route/: api.py  schemas.py  services.py
apps/backend/src/domains/router/: api.py  crud.py  deps.py  models.py  schemas.py
apps/backend/src/domains/schedule/: __init__.py  api.py  crud.py  deps.py  schemas.py
apps/backend/src/domains/script/: api.py  crud.py  deps.py  models.py  schemas.py  services.py
apps/backend/src/domains/system/: api.py  crud.py  deps.py  models.py  push.py  schemas.py  services.py
apps/backend/src/domains/user/: api.py  crud.py  deps.py  schemas.py  services.py
apps/backend/src/domains/worker/: api.py  crud.py  deps.py  event_service.py  models.py  schemas.py  services.py
apps/backend/src/locales/: i18n.py  types.py  utils.py  watch.py
apps/backend/src/locales/en-US/: common.json
apps/backend/src/locales/zh-CN/: common.json
apps/backend/src/middlewares/: audit.py  context.py  i18n.py  limiter.py  logger.py  metrics.py  state.py
apps/backend/src/models/: __init__.py  auth.py  manage.py  router.py  schedule.py
apps/backend/src/queues/: app.py  celery.py  consumer.py  deps.py  models.py  schedule.py  scheduler.py  signals.py  task.py
apps/backend/src/queues/tasks/: aggregate_metrics.py  session_cleanup.py
apps/backend/src/schemas/: auth.py  manage.py  request.py  response.py  role.py  router.py
apps/backend/src/services/: auth.py  manage.py  roles.py
apps/backend/src/sio/: app.py  constants.py
apps/backend/src/sio/events/: chat.py  (+4 more)
apps/backend/src/utils/: __init__.py  date.py  enums.py  minio_client.py  nanoid.py  request.py  security.py  timezone.py  utils.py  uuid7.py  validate.py
apps/backend/src/websockets/: app.py  params.py  server.py
apps/backend/tests/: conftest.py  test_plugin_isolation.py  utils.py
apps/backend/tests/auth/: test_login.py
apps/backend/tests/crud/: test_redis_base.py  test_sql_base.py
apps/backend/tests/middlewares/: test_exception_handlers.py  test_i18n_middleware.py  test_metrics_middleware.py
apps/backend/tests/testing/: __init__.py  fixtures.py  utils.py
(+624 files in other folders)
