[project]
name = "monorepo-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["monorepo-example-backend"]

[dependency-groups]
dev = [
    "ruff==0.14.5",
    "mypy==1.18.2",
    "coverage==7.12.0",
]

[tool.uv.sources]
monorepo-example-backend = { workspace = true }

[tool.uv.workspace]
members = [
    "apps/backend"
]

[tool.mypy]
plugins = [
    "pydantic.mypy"
]

# Do not check imported modules, only check the current module.
follow_imports = "silent"

# Ignore missing type information when importing modules.
ignore_missing_imports = true

# Enable warnings for redundant type casting.
warn_redundant_casts = true

# Check for function definitions without type annotations.
check_untyped_defs = true

# Prevent implicit re-exporting.
no_implicit_reexport = true

# Do not allow the definition of functions without type annotations.
disallow_untyped_defs = true


[tool.pydantic-mypy]
# Prevent the inclusion of extra fields during the initialization of the Pydantic model.
init_forbid_extra = true

# Ensure that the field types of the model are correctly type-checked during initialization.
init_typed = true

# Warning for the case of missing dynamic aliases.
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 120
target-version = "py312"
indent-width = 4

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I001",
]
ignore = []
per-file-ignores = {}
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Directories or files that do not need to be checked.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".idea",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint.mccabe]
max-complexity = 10