[project]
name = "monorepo-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["monorepo-example-backend"]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "coverage==7.13.5",
    "ty>=0.0.29",
]

[tool.uv.sources]
monorepo-example-backend = { workspace = true }

[tool.uv.workspace]
members = [
    "apps/backend"
]

[tool.ty.src]
exclude = [
    "**/alembic/",
    "**/tests/"
]

[tool.ty.rules]
invalid-method-override = "ignore"

[tool.ruff]
line-length = 120
target-version = "py312"
indent-width = 4

# Directories or files that do not need to be checked.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".idea",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "apps/backend/src/locales/types.py",
    "apps/backend/alembic"
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I001",
]
ignore = []
per-file-ignores = { }
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10
