[project]
name = "rapidkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["rapidkit-backend", "rapidkit-core", "rapidkit-common", "rapidkit-plugin-script", "rapidkit-plugin-monitoring", "rapidkit-plugin-system", "rapidkit-plugin-worker", "rapidkit-plugin-schedule", "rapidkit-plugin-menu", "rapidkit-plugin-auth", "rapidkit-plugin-user"]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "coverage==7.13.5",
    "ty>=0.0.29",
]

[tool.uv.sources]
rapidkit-backend = { workspace = true }
rapidkit-core = { workspace = true }
rapidkit-common = { workspace = true }
rapidkit-plugin-script = { workspace = true }
rapidkit-plugin-monitoring = { workspace = true }
rapidkit-plugin-system = { workspace = true }
rapidkit-plugin-worker = { workspace = true }
rapidkit-plugin-schedule = { workspace = true }
rapidkit-plugin-menu = { workspace = true }
rapidkit-plugin-auth = { workspace = true }
rapidkit-plugin-user = { workspace = true }

[tool.uv.workspace]
members = [
    "apps/backend",
    "apps/backend/plugins/*",
    "packages/core",
    "packages/common",
]

[tool.ty.src]
exclude = [
    "**/alembic/",
    "**/tests/"
]

[tool.ty.rules]
invalid-method-override = "ignore"

[tool.ruff]
line-length = 120
target-version = "py312"
indent-width = 4

# Directories or files that do not need to be checked.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".idea",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "apps/backend/src/locales/types.py",
    "apps/backend/alembic"
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I001",
]
ignore = []
per-file-ignores = { }
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10
