[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monorepo-example-backend"
authors = [
    {name = "Coke", email = "jock74608@gmail.com"}
]
description = "Async-FastAPI-MultiDB is an asynchronous FastAPI template project designed to seamlessly integrate both SQL (e.g., PostgreSQL, MySQL) and NoSQL (e.g., MongoDB) databases. This template offers a modern and efficient web framework solution supporting asynchronous request handling, making it ideal for building scalable API services."
requires-python = ">= 3.12"
version = "0.1.0"
dependencies = [
    # Server
    "fastapi>=0.115.11,<1.0",
    "uvicorn==0.38.0",
    "greenlet==3.2.4",
    # In FastAPI, if you want to use Form or File to receive form data or file uploads, you must install the python-multipart dependency.
    "python-multipart==0.0.20",
    # Encryption Algorithm
    "authlib==1.6.5",
    "bcrypt==5.0.0",
    "cryptography==46.0.3",
    # Python Type
    "pydantic-settings==2.12.0",
    "pydantic[email]==2.12.4",
    "sqlmodel==0.0.27",
    # Socket
    "python-socketio==5.14.3",
    "websocket-client==1.9.0",
    # Database
    "redis==7.1.0",
    # In theory, psycopg alone is sufficient to handle both synchronous and asynchronous connections.
    # However, asyncpg typically offers better performance in asynchronous scenarios.
    "asyncpg==0.30.0",
    "psycopg[binary,pool]==3.2.12",
    "alembic==1.17.2",
    "minio==7.2.18",
    # Celery
    "celery==5.5.3",
    "babel>=2.17.0",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff==0.14.5",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "coverage==7.12.0",
    "aiosqlite==0.21.0",
    "httpx==0.28.1",
    "asgi-lifespan==2.1.0",
    "ty>=0.0.2",
]

[tool.hatch.build.targets.wheel]
include = ["src/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:The application is currently running in the local environment.*:RuntimeWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince211"
]
