[project]
name = "rapidkit-plugin-menu"
version = "0.1.0"
description = "RapidKit menu & route management plugin"
requires-python = ">=3.14"
dependencies = [
    "rapidkit-core",
    "rapidkit-common",
]

[project.entry-points."rapidkit.plugins"]
menu = "plugin_menu:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plugin_menu"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
