[project]
name = "rapidkit-plugin-monitoring"
version = "0.1.0"
description = "RapidKit API monitoring plugin"
requires-python = ">=3.14"
dependencies = [
    "rapidkit-core",
    "rapidkit-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plugin_monitoring"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
