[project]
name = "rapidkit-plugin-user"
version = "0.1.0"
description = "RapidKit user management plugin"
requires-python = ">=3.14"
dependencies = [
    "rapidkit-core",
    "rapidkit-common",
    "rapidkit-plugin-auth",
]

[project.entry-points."rapidkit.plugins"]
user = "plugin_user:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plugin_user"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
