[project]
name = "rapidkit-plugin-user"
version = "0.1.0"
description = "RapidKit user management plugin"
requires-python = ">=3.14"
dependencies = [
    "rapidkit-core",
    "rapidkit-common",
    "rapidkit-framework",
    "rapidkit-security",
]

[project.entry-points."rapidkit.plugins"]
user = "plugin_user:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plugin_user"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
