[project]
name = "rapidkit-plugin-worker"
version = "0.1.0"
description = "RapidKit Celery worker monitoring plugin"
requires-python = ">=3.14"
dependencies = [
    "rapidkit-core",
    "rapidkit-common",
    "celery>=5.6.3,<6.0",
    "fastapi-sio-di>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plugin_worker"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
